@@ -8,6 +8,10 @@ the rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
+01/25/14 Daniel K. O.
+        * Removed ALLOCA calls from dHashSpace; it should not depend
+          on stack size limits anymore.
+
 12/06/13 Daniel K. O.
         * Applied patch #181: fix some bugs in AMotor joint.
         * Applied patch #186: fix some bugs in PU joint.
